--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux-fullstack-project",
+  "name": "react-toolkit-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
