--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "prettify": "prettier --write \"src/**/*.+(ts|js|jsx|tsx|json|css|scss)\" --ignore-path .gitignore",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^5.51.15",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
-    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,7 +24,6 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/lodash": "^4.17.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.11",
@@ -34,6 +32,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "prettier": "^3.3.3",
+    "terser": "^5.31.3",
     "vite": "^4.3.9"
   }
 }
